--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <h3>yoyoyoyo</h3>
-        <p>Hi my name is Nakul Goyal! I am a human being.</p>
+        <h3>Raghav Birthday lol</h3>
+        <p>Good insaan</p>
     </body>
 </html>
